Fix inputs size, help messages colors and buttons alignment

--- a/admin-dev/themes/new-theme/scss/components/_form.scss
+++ b/admin-dev/themes/new-theme/scss/components/_form.scss
@@ -82,6 +82,10 @@
   }
 }
 
+.form-group h3 ~ .subtitle {
+  color: var(--#{$cdk}primary-600);
+}
+
 .invalid-feedback-container {
   padding-top: 8px;
 }
@@ -240,6 +244,13 @@
     .select2-selection {
       padding: var(--#{$cdk}size-8) var(--#{$cdk}size-32) var(--#{$cdk}size-8) var(--#{$cdk}size-16);
     }
+  }
+
+  /* Ensure select2 have the same height as other regular select inputs */
+  .select2-selection--single {
+    padding-top: var(--#{$cdk}size-2);
+    padding-bottom: var(--#{$cdk}size-2);
+    height: auto !important;
   }
 }
 
